Fixes issue #6